adding tests and wercker config
we now have some basic unit tests
and wercker steps to go with it

--- a/wercker.yml
+++ b/wercker.yml
@@ -3,3 +3,13 @@ build:
   steps:
     - wercker/bundle-install@1.1.1
     - validate-wercker-step
+
+    - script:
+        name: Make sure python is there
+        code: |
+          sudo apt-get install -y python
+
+    - script:
+        name: Run some basic unit tests
+        code: |
+          python json_parser_unittest.py
