--- a/wercker.yml
+++ b/wercker.yml
@@ -8,7 +8,7 @@ build:
         name: Make sure python is there
         code: |
           sudo apt-get install -y python
-          sudo apt-get install libxslt-dev libxml2-dev libevent-dev
+          sudo apt-get install -y libxslt-dev libxml2-dev libevent-dev
           sudo pip install pyvows
 
     - script:
